--- a/app/src/main/res/menu/task_menu.xml
+++ b/app/src/main/res/menu/task_menu.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@id/key_action_open_preference"
+        android:icon="@drawable/ic_settings"
+        app:showAsAction="always"
         android:title="@string/task_menu_preferences" />
 
 </menu>
