--- a/app/src/main/res/layout/fragment_category_new.xml
+++ b/app/src/main/res/layout/fragment_category_new.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="viewModel"
-            type="com.escodro.alkaa.ui.category.create.NewCategoryViewModel"/>
+            type="com.escodro.alkaa.ui.category.create.NewCategoryViewModel" />
 
     </data>
 
@@ -20,17 +20,17 @@
             android:layout_height="wrap_content"
             android:inputType="textCapSentences"
             android:text="@={viewModel.newCategory}"
-            android:textSize="32sp"/>
+            android:textSize="32sp" />
 
         <RadioGroup
             android:id="@+id/radiogroup_categorynew_label"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:checkedButton="@+id/radiobutton_categorynew_blue"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:checkedButton="@+id/radiobutton_categorynew_blue"
             app:layout_constraintTop_toBottomOf="@+id/edittext_categorynew_description">
 
             <RadioButton
@@ -38,63 +38,63 @@
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_weight="1"
-                android:tag="@color/blue"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/blue"/>
+                android:buttonTint="@color/blue"
+                android:tag="@color/blue" />
 
             <RadioButton
                 android:id="@+id/radiobutton_categorynew_orange"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_weight="1"
-                android:tag="@color/green"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/green"/>
+                android:buttonTint="@color/green"
+                android:tag="@color/green" />
 
             <RadioButton
                 android:id="@+id/radiobutton_categorynew_pink"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_weight="1"
-                android:tag="@color/purple"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/purple"/>
+                android:buttonTint="@color/purple"
+                android:tag="@color/purple" />
 
             <RadioButton
                 android:id="@+id/radiobutton_categorynew_red"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_weight="1"
-                android:tag="@color/pink"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/pink"/>
+                android:buttonTint="@color/pink"
+                android:tag="@color/pink" />
 
             <RadioButton
                 android:id="@+id/radiobutton_categorynew_purple"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_weight="1"
-                android:tag="@color/red"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/red"/>
+                android:buttonTint="@color/red"
+                android:tag="@color/red" />
 
             <RadioButton
                 android:id="@+id/radiobutton_categorynew_green"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_weight="1"
-                android:tag="@color/orange"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/orange"/>
+                android:buttonTint="@color/orange"
+                android:tag="@color/orange" />
 
             <RadioButton
                 android:id="@+id/radiobutton_categorynew_yellow"
                 android:layout_width="64dp"
                 android:layout_height="64dp"
                 android:layout_weight="1"
-                android:tag="@color/yellow"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/yellow"/>
+                android:buttonTint="@color/yellow"
+                android:tag="@color/yellow" />
 
         </RadioGroup>
 
@@ -107,7 +107,7 @@
             android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
