:sparkles: Show category information in the action bar
Shared ViewModel created to store the information between the
MainActivity and the TaskListFragment, so every time the title is
updated in the Fragment, the ActionBar in the Activity is updated.
The TextView title was also removed.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,6 @@
     <fragment
         android:id="@+id/taskListFragment"
         android:name="com.escodro.alkaa.ui.task.list.TaskListFragment"
-        android:label="@string/task_list_title"
         tools:layout="@layout/fragment_task_list">
 
         <action
@@ -43,8 +42,7 @@
 
     <fragment
         android:id="@+id/taskDetailFragment"
-        android:name="com.escodro.alkaa.ui.task.detail.TaskDetailFragment"
-        android:label="@string/task_list_title">
+        android:name="com.escodro.alkaa.ui.task.detail.TaskDetailFragment">
 
         <argument
             android:name="task"
