--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -38,7 +38,17 @@
     <fragment
         android:id="@+id/preferenceFragment"
         android:name="com.escodro.alkaa.ui.preference.PreferenceFragment"
-        android:label="@string/preference_title" />
+        android:label="@string/preference_title">
+
+        <action
+            android:id="@+id/key_action_open_about"
+            app:destination="@id/aboutFragment"
+            app:enterAnim="@anim/slide_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/slide_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+
+    </fragment>
 
     <fragment
         android:id="@+id/taskDetailFragment"
@@ -66,5 +76,11 @@
         android:name="com.escodro.alkaa.ui.category.create.NewCategoryFragment"
         android:label="@string/category_detail_title"
         tools:layout="@layout/fragment_category_new" />
+
+    <fragment
+        android:id="@+id/aboutFragment"
+        android:name="com.escodro.alkaa.ui.about.AboutFragment"
+        android:label="@string/about_detail_title"
+        tools:layout="@layout/fragment_about" />
 
 </navigation>
