--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,12 @@
     <color name="orange">#F98847</color>
     <color name="yellow">#E0C03E</color>
 
+    <!-- About background -->
+    <color name="gradient_start_1">#044fab</color>
+    <color name="gradient_start_2">#21d6d3</color>
+    <color name="gradient_middle_1">#36b743</color>
+    <color name="gradient_middle_2">#e6e642</color>
+    <color name="gradient_end_1">#933c94</color>
+    <color name="gradient_end_2">#517f95</color>
+
 </resources>
