--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -6,4 +6,8 @@
         android:summary="1.0.0"
         android:title="Version" />
 
+    <Preference
+        android:key="@string/key_pref_about"
+        android:title="@string/preference_item_about" />
+
 </PreferenceScreen>
