:lipstick: Show correct app version on Preference screen
Extension created to get the correct version
Preference items reorganized

--- a/app/src/main/res/values/keys.xml
+++ b/app/src/main/res/values/keys.xml
@@ -2,5 +2,6 @@
 <resources>
 
     <string name="key_pref_about">key_pref_about</string>
+    <string name="key_pref_version">key_pref_version</string>
 
 </resources>
