:lipstick: Update color scheme
Colors updated
Min SDK updated

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#2f4550</color>
-    <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#b8dbd9</color>
+    <color name="colorAccent">#1976d2</color>
 
     <!-- General -->
     <color name="gray">#808080</color>
