--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
 
     <!-- General -->
     <color name="gray">#808080</color>
-    <color name="gray_light">#bcbcbc</color>
+    <color name="gray_light">#9d9d9d</color>
 
     <!-- Category -->
     <color name="blue">#62A7E0</color>
