--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <!-- General -->
     <color name="gray">#808080</color>
     <color name="gray_light">#9d9d9d</color>
+    <color name="gray_shadow_light">#d9d9d9</color>
 
     <!-- Category -->
     <color name="blue">#62A7E0</color>
