:globe_with_meridians: Add Portuguese (Brazil) as supported language
Alkaa is now Tupiniquim!

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -7,6 +7,6 @@
 
     <Preference
         android:key="@string/key_pref_version"
-        android:title="Version" />
+        android:title="@string/preference_item_version" />
 
 </PreferenceScreen>
