--- a/app/src/main/res/layout/fragment_category_new.xml
+++ b/app/src/main/res/layout/fragment_category_new.xml
@@ -44,8 +44,7 @@
                 android:layout_height="64dp"
                 android:layout_weight="1"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/blue"
-                android:tag="@color/blue" />
+                android:buttonTint="@color/blue" />
 
             <RadioButton
                 android:id="@+id/radiobutton_categorynew_orange"
@@ -53,8 +52,7 @@
                 android:layout_height="64dp"
                 android:layout_weight="1"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/green"
-                android:tag="@color/green" />
+                android:buttonTint="@color/green" />
 
             <RadioButton
                 android:id="@+id/radiobutton_categorynew_pink"
@@ -62,8 +60,7 @@
                 android:layout_height="64dp"
                 android:layout_weight="1"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/purple"
-                android:tag="@color/purple" />
+                android:buttonTint="@color/purple" />
 
             <RadioButton
                 android:id="@+id/radiobutton_categorynew_red"
@@ -71,8 +68,7 @@
                 android:layout_height="64dp"
                 android:layout_weight="1"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/pink"
-                android:tag="@color/pink" />
+                android:buttonTint="@color/pink" />
 
             <RadioButton
                 android:id="@+id/radiobutton_categorynew_purple"
@@ -80,8 +76,7 @@
                 android:layout_height="64dp"
                 android:layout_weight="1"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/red"
-                android:tag="@color/red" />
+                android:buttonTint="@color/red" />
 
             <RadioButton
                 android:id="@+id/radiobutton_categorynew_green"
@@ -89,8 +84,7 @@
                 android:layout_height="64dp"
                 android:layout_weight="1"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/orange"
-                android:tag="@color/orange" />
+                android:buttonTint="@color/orange" />
 
             <RadioButton
                 android:id="@+id/radiobutton_categorynew_yellow"
@@ -98,8 +92,7 @@
                 android:layout_height="64dp"
                 android:layout_weight="1"
                 android:button="@drawable/selector_radio_category"
-                android:buttonTint="@color/yellow"
-                android:tag="@color/yellow" />
+                android:buttonTint="@color/yellow" />
 
         </RadioGroup>
 
