--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -40,6 +40,16 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:shapeColor="@{category.color}" />
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_margin="18dp"
+                android:src="@drawable/ic_category_label_checked"
+                app:layout_constraintBottom_toBottomOf="@id/shapeview_itemcategory_color"
+                app:layout_constraintEnd_toEndOf="@id/shapeview_itemcategory_color"
+                app:layout_constraintStart_toStartOf="@id/shapeview_itemcategory_color"
+                app:layout_constraintTop_toTopOf="@id/shapeview_itemcategory_color" />
+
             <TextView
                 android:id="@+id/textview_itemcategory_description"
                 android:layout_width="0dp"
