--- a/app/src/main/res/layout/item_add_task.xml
+++ b/app/src/main/res/layout/item_add_task.xml
@@ -46,7 +46,7 @@
             android:gravity="center_vertical"
             android:hint="@string/task_add_new"
             android:imeOptions="actionDone"
-            android:inputType="text"
+            android:inputType="textCapSentences"
             android:maxLines="1"
             android:singleLine="true"
             android:textSize="18sp"
