:recycle: Update structure to load task by id
Task structure to load the task from id instead of passing the object by
parameter

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -47,8 +47,8 @@
         android:name="com.escodro.alkaa.ui.task.detail.TaskDetailFragment">
 
         <argument
-            android:name="task"
-            app:argType="com.escodro.alkaa.data.local.model.Task" />
+            android:name="taskId"
+            app:argType="long" />
 
     </fragment>
 
