--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -44,7 +44,8 @@
 
     <fragment
         android:id="@+id/taskDetailFragment"
-        android:name="com.escodro.alkaa.ui.task.detail.TaskDetailFragment">
+        android:name="com.escodro.alkaa.ui.task.detail.TaskDetailFragment"
+        tools:layout="@layout/fragment_task_detail">
 
         <argument
             android:name="taskId"
