--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -40,7 +40,7 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageview_taskdetail_category"
                 android:layout_width="32dp"
-                android:layout_height="63dp"
+                android:layout_height="32dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="24dp"
                 android:src="@drawable/ic_category"
@@ -50,11 +50,31 @@
             <com.escodro.alkaa.common.view.ScrollableRadioGroup
                 android:id="@+id/srg_taskdetail_list"
                 android:layout_width="0dp"
-                android:layout_height="64dp"
+                android:layout_height="32dp"
                 android:layout_marginStart="16dp"
+                android:visibility="invisible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/imageview_taskdetail_category"
                 app:layout_constraintTop_toTopOf="@id/imageview_taskdetail_category" />
+
+            <HorizontalScrollView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:scrollbars="none"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/imageview_taskdetail_category"
+                app:layout_constraintTop_toTopOf="@id/imageview_taskdetail_category">
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/chipgrp_taskdetail_category"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:chipSpacingHorizontal="10dp"
+                    app:singleLine="true"
+                    app:singleSelection="true" />
+
+            </HorizontalScrollView>
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageview_taskdetail_description"
