--- a/app/src/main/res/anim/slide_enter_anim.xml
+++ b/app/src/main/res/anim/slide_enter_anim.xml
@@ -2,7 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:shareInterpolator="false">
     <translate
-        android:duration="700"
+        android:duration="@android:integer/config_longAnimTime"
         android:fromXDelta="100%"
         android:fromYDelta="0%"
         android:toXDelta="0%"
