--- a/app/src/main/res/layout/fragment_task_detail.xml
+++ b/app/src/main/res/layout/fragment_task_detail.xml
@@ -37,35 +37,17 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Buy organic milk?" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/imageview_taskdetail_category"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
-                android:src="@drawable/ic_category"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/edittext_taskdetail_title" />
-
-            <HorizontalScrollView
-                android:id="@+id/scrollview_taskdetail_category"
+            <fragment
+                android:id="@+id/fragment_taskdetail_category"
+                android:name="com.escodro.alkaa.ui.task.detail.TaskCategoryFragment"
                 android:layout_width="0dp"
                 android:layout_height="32dp"
-                android:layout_marginStart="16dp"
-                android:scrollbars="none"
+                android:layout_marginTop="24dp"
+                android:src="@drawable/ic_category"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/imageview_taskdetail_category"
-                app:layout_constraintTop_toTopOf="@id/imageview_taskdetail_category">
-
-                <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/chipgrp_taskdetail_category"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:chipSpacingHorizontal="10dp"
-                    app:singleLine="true"
-                    app:singleSelection="true" />
-
-            </HorizontalScrollView>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/edittext_taskdetail_title"
+                tools:layout="@layout/fragment_task_detail_category" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageview_taskdetail_description"
@@ -75,7 +57,7 @@
                 android:layout_marginTop="24dp"
                 android:src="@drawable/ic_task_description"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/scrollview_taskdetail_category" />
+                app:layout_constraintTop_toBottomOf="@id/fragment_taskdetail_category" />
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/edittext_taskdetail_description"
